--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,10 @@
   ],
   "icons": {
     "128": "icon.png"
+  },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "chris.dentremont@outlook.com"
+    }
   }
 }
